2002-03-12  Ulrik Haugen  <qha@lysator.liu.se>

	* lyskom-rest.el (lyskom-insert-before-prompt): don't let xemacs
	add the text-properties of the prompt to all text inserted before
	the prompt (fixes bug 421).

2002-03-11  Joel Rosdahl  <joel@lysator.liu.se>

	* english-strings.el (lyskom-message): Changed last-log-in to say
	"Last login or logout" instead of "Last login", since that's what
	the server gives us.
	
	* swedish-strings.el (lyskom-message): Likewise.

2002-03-03  Joel Rosdahl  <joel@lysator.liu.se>

	* vars.el.in (lyskom-month-names): Added property
	'lyskom-language-force.

	Fixes to make "make check" happy again:

	* english-strings.el: Added ending mismatch exception for
	newyeareve.
	(lyskom-message): Added year reference to newyearevelate.
	(lyskom-month-names): Make lyskom-month-names belong to en instead
	of sv.  Corrected month names.

	* option-edit.el (lyskom-custom-variables): Removed bogus nil at
	the end.

	Fixed bug 392 and cleaned up printing of text summaries in
	kom-list-summary and kom-list-marks:

	* commands2.el (lyskom-max-text-no-width): New function.
	(lyskom-construct-summary-format-string): New function.
	(lyskom-do-list-summary): Use lyskom-construct-summary-format-string.
	(lyskom-print-summary-line): Get format string as an argument
	instead of building it at each call.
	(kom-list-marks): Use lyskom-construct-summary-format-string.
	(lyskom-print-mark-summary-line): Get format string as an argument
	instead of building it at each call.
	(lyskom-max-mark-width): Added doc string.

	* swedish-strings.el (lyskom-message): Don't abbreviate Lines.

	* english-strings.el (lyskom-message): Don't abbreviate Lines and
	mark-type.  Trimmed whitespace from Author and Subject.

2002-03-03  Per Cederqvist  <ceder@lysator.liu.se>

	Fix bug 406:
	* lyskom-rest.el (lyskom-report-command-answer): Factor out some
	code to lyskom-insert-error.
	(lyskom-insert-error): New function.
	(lyskom-current-error): Call lyskom-insert-error instead of